--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,15 @@ android {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
+        pickFirst 'lib/x86/librealm-jni.so'
+        pickFirst 'lib/x86_64/librealm-jni.so'
+        pickFirst 'lib/arm64-v8a/librealm-jni.so'
+        pickFirst 'lib/armeabi-v7a/librealm-jni.so'
+    }
+    configurations.all {
+        resolutionStrategy {
+            force 'org.webkit:android-jsc:+'
+        }
     }
 }
 
@@ -198,4 +207,12 @@ dependencies {
 if (rnVersion < versionToNumber(0, 75, 0)) {
     apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
     applyNativeModulesAppBuildGradle(project)
+}
+
+repositories {
+    mavenCentral()
+    google()
+    maven {
+        url 'https://maven.google.com'
+    }
 }
