--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/native": "^6.0.2",
+    "@realm/react": "^0.11.0",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
@@ -37,7 +38,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "realm": "^12.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
